[gd_scene load_steps=25 format=3 uid="uid://ewhq7f4agtnn"]

[ext_resource type="Texture2D" uid="uid://bfms6y76d307c" path="res://ui_assets/quests/questCard.png" id="1_fkhaq"]
[ext_resource type="Script" path="res://objects/quests/scroll/quest_scroll.gd" id="2_ov785"]
[ext_resource type="FontFile" uid="uid://cup2yr5w7or1l" path="res://fonts/Minnie.TTF" id="3_36m3l"]
[ext_resource type="Texture2D" uid="uid://q70laflyv64j" path="res://ui_assets/quests/questPictureFrame.png" id="4_k75p4"]
[ext_resource type="Texture2D" uid="uid://b5exblt5wcdwd" path="res://ui_assets/general/Schtickerbook_startparty_button_inactive.png" id="6_leohh"]
[ext_resource type="FontFile" uid="uid://815gwlftl5ik" path="res://fonts/impress-bt.ttf" id="6_o77g1"]
[ext_resource type="PackedScene" uid="uid://bwnrw7jcf01kq" path="res://objects/general_ui/node_viewer/node_viewer.tscn" id="7_55fdq"]
[ext_resource type="PackedScene" uid="uid://b0d1er4oqiqcn" path="res://objects/general_ui/general_button/general_button.tscn" id="7_y781m"]
[ext_resource type="Texture2D" uid="uid://ddcktpjy3gdew" path="res://ui_assets/misc/uiAccessoryDelete_up.png" id="8_v5yml"]
[ext_resource type="Texture2D" uid="uid://b7ri5sq021cvo" path="res://ui_assets/misc/uiAccessoryDelete_down.png" id="9_2kyfp"]
[ext_resource type="Texture2D" uid="uid://dn8vndd37lqom" path="res://ui_assets/misc/uiAccessoryDelete_rollover.png" id="10_5vx2a"]
[ext_resource type="Texture2D" uid="uid://cdkiw5pa7vy8u" path="res://ui_assets/quests/dice_buttons/dice_button4.png" id="11_y86ue"]
[ext_resource type="Texture2D" uid="uid://chr8g3y0s27tb" path="res://ui_assets/quests/dice_buttons/dice_button4_down.png" id="12_4jfhj"]
[ext_resource type="Texture2D" uid="uid://cxw067qe3sh3s" path="res://ui_assets/quests/dice_buttons/dice_button4_ro.png" id="13_qsmcp"]

[sub_resource type="LabelSettings" id="LabelSettings_660bl"]
font = ExtResource("3_36m3l")
font_size = 18
font_color = Color(0.309804, 0.254902, 0.2, 1)

[sub_resource type="LabelSettings" id="LabelSettings_u86cx"]
font = ExtResource("6_o77g1")
font_size = 20
font_color = Color(0.309804, 0.254902, 0.2, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ddf4f"]
bg_color = Color(0.92549, 0.87451, 0.717647, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.639216, 0.619608, 0.501961, 1)
border_blend = true
shadow_color = Color(0, 0, 0, 0.0784314)
shadow_size = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jkphy"]
bg_color = Color(0.498039, 0.698039, 0.498039, 1)

[sub_resource type="LabelSettings" id="LabelSettings_bhsxt"]
font = ExtResource("6_o77g1")
font_color = Color(0.0352941, 0.164706, 0.313726, 1)

[sub_resource type="ViewportTexture" id="ViewportTexture_eccfs"]
viewport_path = NodePath("SubViewport")

[sub_resource type="LabelSettings" id="LabelSettings_piibh"]
font = ExtResource("6_o77g1")
font_size = 18

[sub_resource type="Animation" id="Animation_5h5h4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("QuestBG/GoalIcon:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("QuestBG:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_mqy6a"]
resource_name = "quest_pop-in"
length = 1.33334
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("QuestBG/GoalIcon:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.46),
"transitions": PackedFloat32Array(0.189464, 1.46409, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1.2, 1.2), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("QuestBG:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.45),
"transitions": PackedFloat32Array(0.25, 0.25, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1.1, 1.1), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lj152"]
_data = {
"RESET": SubResource("Animation_5h5h4"),
"quest_pop-in": SubResource("Animation_mqy6a")
}

[node name="QuestScroll" type="Control"]
custom_minimum_size = Vector2(380, 300)
layout_mode = 3
anchors_preset = 0
offset_right = 380.0
offset_bottom = 300.0
pivot_offset = Vector2(190, 150)
script = ExtResource("2_ov785")

[node name="QuestBG" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -165.0
offset_top = -117.0
offset_right = 166.0
offset_bottom = 142.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(165, 129)
texture = ExtResource("1_fkhaq")

[node name="TitleLabel" type="Label" parent="QuestBG"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -43.5
offset_top = 9.0
offset_right = 43.5
offset_bottom = 32.0
grow_horizontal = 2
text = "WANTED"
label_settings = SubResource("LabelSettings_660bl")
horizontal_alignment = 1

[node name="IconBG" type="TextureRect" parent="QuestBG"]
unique_name_in_owner = true
self_modulate = Color(0.415686, 0.419608, 0.717647, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -38.0
offset_top = -94.5
offset_right = 38.0
offset_bottom = -19.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_k75p4")
expand_mode = 1

[node name="QuestIcon" type="TextureRect" parent="QuestBG/IconBG"]
unique_name_in_owner = true
texture_filter = 4
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.0
offset_top = -27.5
offset_right = 28.0
offset_bottom = 28.5
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="QuotaLabel" type="Label" parent="QuestBG"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -111.5
offset_top = -19.5
offset_right = 111.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "99999 Cogs"
label_settings = SubResource("LabelSettings_u86cx")
horizontal_alignment = 1

[node name="LocationLabel" type="Label" parent="QuestBG"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -41.0
offset_top = 18.5
offset_right = 41.0
offset_bottom = 43.5
grow_horizontal = 2
grow_vertical = 2
text = "Anywhere"
label_settings = SubResource("LabelSettings_u86cx")

[node name="ProgressBar" type="ProgressBar" parent="QuestBG"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -95.5
offset_top = -70.0
offset_right = 95.5
offset_bottom = -51.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_ddf4f")
theme_override_styles/fill = SubResource("StyleBoxFlat_jkphy")
value = 25.0
show_percentage = false

[node name="ProgressLabel" type="Label" parent="QuestBG/ProgressBar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "1 of 99999"
label_settings = SubResource("LabelSettings_bhsxt")
horizontal_alignment = 1
vertical_alignment = 1

[node name="GoalIcon" type="TextureRect" parent="QuestBG"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 258.0
offset_top = -28.0
offset_right = 351.0
offset_bottom = 65.0
pivot_offset = Vector2(46, 46)
texture = ExtResource("6_leohh")
expand_mode = 1

[node name="NodeViewer" parent="QuestBG/GoalIcon" instance=ExtResource("7_55fdq")]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("ViewportTexture_eccfs")
expand_mode = 1

[node name="CollectButton" parent="QuestBG" instance=ExtResource("7_y781m")]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -48.5
offset_top = -38.0
offset_right = 48.5
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = ExtResource("8_v5yml")
texture_pressed = ExtResource("9_2kyfp")
texture_hover = ExtResource("10_5vx2a")
texture_disabled = null
text = "Collect"

[node name="Label" parent="QuestBG/CollectButton" index="0"]
text = "Collect"
label_settings = SubResource("LabelSettings_piibh")

[node name="RerollButton" parent="QuestBG" instance=ExtResource("7_y781m")]
unique_name_in_owner = true
layout_mode = 0
offset_left = -36.0
offset_top = -2.0
offset_right = 28.0
offset_bottom = 63.0
rotation = -0.493163
texture_normal = ExtResource("11_y86ue")
texture_pressed = ExtResource("12_4jfhj")
texture_hover = ExtResource("13_qsmcp")
texture_disabled = null

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lj152")
}

[connection signal="pressed" from="QuestBG/CollectButton" to="." method="complete_quest"]
[connection signal="pressed" from="QuestBG/RerollButton" to="." method="reroll_quest"]

[editable path="QuestBG/CollectButton"]
